tests/negative/neg_named_number_unsupported.safe
-- Test: neg_named_number_unsupported
-- Description: Named-number syntax remains out of scope for PR08.3a.
-- Expected: REJECT unsupported_source_construct

package neg_Named_Number_Unsupported

   limit : constant = 4;


